--- a/data-extend-generic.cabal
+++ b/data-extend-generic.cabal
@@ -15,19 +15,9 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
-                     , Data.Extend
+  exposed-modules:     Data.Extend
                      , Data.Extend.Internal
   build-depends:       base >= 4.7 && < 5
-                     , generic-deriving
-  default-language:    Haskell2010
-
-executable data-extend-generic-exe
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , data-extend-generic
   default-language:    Haskell2010
 
 test-suite data-extend-generic-test
